--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
